--- a/frontend/src/css/App.scss
+++ b/frontend/src/css/App.scss
@@ -1,5 +1,5 @@
 $colorOfText : #657195;
-$colorOfTheme : rgb(22, 22, 197);
+$colorOfTheme : #4d65dc;
 $colorOfAlert : #dd1b1b;
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap');
@@ -98,15 +98,16 @@ $colorOfAlert : #dd1b1b;
 @mixin styleButton($width,$height,$textSize:16px) {
     width:$width;
     height:$height;
-    background: black;
+    background: #242939;
     color:white;
-    border: none;
+    border: #242939;
+    border-radius: 3px;
     font-size : $textSize;
     font-weight:700;
     font-family: 'Montserrat', sans-serif;
     cursor: pointer;
     &:hover {
-        background: $colorOfTheme;
+        background: #3556f9;
         transition: 0.3s linear;
     }
     @content;
@@ -139,6 +140,7 @@ $colorOfAlert : #dd1b1b;
         top: 20px;
         font-size: 30px;
         cursor: pointer;
+        color: #48465b;
         &:hover {
             color:$colorOfTheme
         } 
@@ -149,9 +151,9 @@ $colorOfAlert : #dd1b1b;
         top: 20px;
         font-size: 30px;
         cursor: pointer;
-        color : black;
+        color : #48465b;
         &:hover {
-            color:rgb(231, 26, 26)
+            color:rgb(231, 26, 26);
         }
         animation : emergenceHeart .5s linear 1;
     }
@@ -161,9 +163,9 @@ $colorOfAlert : #dd1b1b;
         top: 20px;
         font-size: 30px;
         cursor: pointer;
-        color : black;
+        color : #48465b;
         &:hover {
-            color:$colorOfTheme
+            color:$colorOfTheme;
         }
     }
     .fa-search {
@@ -172,7 +174,11 @@ $colorOfAlert : #dd1b1b;
         top: 20px;
         transition: .5 all linear;
         font-size: 30px;
-        cursor : pointer
+        cursor : pointer;
+        color: #48465b;
+        &:hover {
+            color: $colorOfTheme;
+        }
     }
     .changeLocal {
         right: 200px !important;
@@ -218,8 +224,8 @@ $colorOfAlert : #dd1b1b;
 
 footer {
     margin-top : 150px;
-    background: black;
-    height : 15vh;
+    background:#242939;
+    height : 30vh;
     width : 100vw;
     display : grid;
     grid-template-columns : 1fr;
@@ -227,7 +233,104 @@ footer {
     font-size : 25px;
     font-weight : bold;
     text-align : center;
-    align-items : center
+    align-items : center;
+    position: relative;
+    > .reg {
+        border-top: 1px solid #171a24;
+        border-bottom: 1px solid #171a24;
+        height: 50px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right:0;
+        padding: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        button {
+            position: relative;
+            width: 150px;
+            height: 40px;
+            border-radius: 40px;
+            line-height: 20px;
+            text-transform: uppercase;
+            border: none;
+            cursor: pointer;
+            outline: none;
+            color: #fff;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 20px;
+            background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+            background-size: 400%;
+            z-index: 1;
+            &:hover {
+                animation: switchBackground 4s linear infinite;
+            }
+            &::before {
+                content: '';
+                position: absolute;
+                left: -5px;
+                right: -5px;
+                top: -5px;
+                bottom: -5px;
+                z-index: -1;
+                background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+                background-size: 400%;
+                border-radius: 40px;
+                transition: .7s;
+                opacity: 0;
+            }
+            &:hover::before {
+                opacity: 1;
+                filter: blur(10px);
+                animation: switchBackground 4s linear infinite;
+            }
+        }
+    }
+    > .social-media {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        position: relative;
+        top: 10px;
+        .social-media__facebook {
+            width: 50px;
+            height: 50px;
+            background-color: #3b5998;
+            border-radius: 100%;
+            margin: 1rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+        }
+        .social-media__vk {
+            @extend .social-media__facebook;
+        }
+        .social-media__inst {
+            @extend .social-media__facebook;
+            background-color: mix(mix(#833ab4,#fd1d1d),#f56040);
+        }
+        .social-media__dribble {
+            @extend .social-media__facebook;
+            background-color: #ea4c89;
+        }
+    }
+    > .copyright {
+        background-color: #171a24;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        > p {
+            font-size: 18px;
+            font-family: 'Montserrat',sans-serif;
+            font-weight: 300;
+            span {
+                opacity: 0.7;
+            }
+        }
+    }
 }
 
 .error404 {
@@ -384,16 +487,74 @@ footer {
 }
 
 .app-header__title {
-    font-weight:100;
-    text-align:center;
-    font-family:'Montserrat 500', sans-serif;
+    height: 100%;
+    overflow: hidden;
+    > h2 {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        top: 0;
+        letter-spacing: 5px;
+        font-family: 'Montserrat', sans-serif;
+        color: #fff;
+        transition: .7s;
+        opacity: 0;
+        > span {
+            display: inline-block;
+            text-transform: uppercase;
+            &:nth-child(1) {
+                animation: titleEffect 2.8s 1.8s linear;
+            }
+            &:nth-child(2) {
+                animation: titleEffect 2.8s 2s linear;
+            }
+            &:nth-child(3) {
+                animation: titleEffect 2.8s 2.2s linear;
+            }
+            &:nth-child(4) {
+                animation: titleEffect 2.8s 2.4s linear;
+            }
+            &:nth-child(5) {
+                animation: titleEffect 2.8s 2.6s linear;
+            }
+            &:nth-child(6) {
+                animation: titleEffect 2.8s 2.8s linear;
+            }
+            &:nth-child(7) {
+                animation: titleEffect 2.8s 3s linear;
+            }
+            &:nth-child(8) {
+                animation: titleEffect 2.8s 3.2s linear;
+            }
+            &:nth-child(9) {
+                animation: titleEffect 2.8s 3.4s linear;
+            }
+        }
+    }
+    > video {
+        object-fit: cover;
+        z-index: -1;
+        position:relative;
+        bottom: 18px;
+        height: 120px;
+        width: 100%;
+        transition: .7s;
+        &::before {
+            content: '';
+            display: block;
+            position:absolute;
+            left:0;
+            width:1px;
+            height:100%
+        }
+    }
 }
 
 .app-header__button {
     width:35px;
     height:35px;
     position: absolute;
-    background: black;
+    background: #242939;
     border:none;
     top:0%;
     transition:1s
@@ -541,7 +702,7 @@ footer {
         display : grid;
         grid-template-columns : repeat(2,1fr);
         .fisrt-side {
-            @include side(black)
+            @include side(#242939)
         }
         .second-side {
             @include side($colorOfTheme)
@@ -779,7 +940,7 @@ footer {
         z-index : 3;
         position : relative;
         font-size : 20px !important;
-        color : #111;
+        color: #242939;
     }
     &::before {
         content : '';
@@ -805,7 +966,7 @@ footer {
         transition : .4s ease-in-out
     }
     &:hover {
-        background : #111;
+        background : #242939;
         span {
             color : white;
             transition-delay : .4s
@@ -928,7 +1089,7 @@ footer {
         }
     }
     .products-container__catalog {
-        background: $colorOfTheme;
+        background: $colorOfTheme; 
         height: 100%;
         margin: 0;
         list-style-type: none;
@@ -972,12 +1133,13 @@ footer {
             padding-left : 10px;
             animation : deployCatalog .5s linear 1;
             overflow : hidden;
-            background : rgb(15, 15, 15);
+            background : #242939;
             position : relative;
             right : 18px;
             width : 110%;
-            transition : .7s;
+            transition : .5s;
             margin-bottom : 0;
+            max-height: 15rem;
             > li {
                 margin : 15px 0 0 15px;
                 font-size: 18px;
@@ -1065,7 +1227,7 @@ footer {
         position : relative;
         right : 18px;
         width : 110%;
-        transition : .7s;
+        transition : .5s;
         margin-bottom : 0;
         > li {
             margin : 15px 0 0 15px;
@@ -1171,34 +1333,52 @@ footer {
     position : relative;
     padding-top : 1.5rem;
     padding-bottom : 1.5rem;
+    border-radius: 8px;
+    box-shadow: 4px 4px 15px rgba(0,0,0,.6);
     .back {
-        @include controller(left,3px);
+        @include controller(left,3vw);
     }
     .go {
-        @include controller(right,20px); 
+        @include controller(right,2vw); 
     }
     .recommendations__title {
         font-family : 'Montserrat',sans-serif;
         text-align : left !important;
         margin : 0 0 1rem 25px;
+        color: #48465b;
+        transition: .5s;
+        position: relative;
+        cursor: pointer;
+        &::before {
+            content: '';
+            position: absolute;
+            bottom: -2px;
+            width: 0px;
+            height: 3px;
+            background: #dc4dac;
+            display: block;
+            transition: 1s;
+        }
+        &:hover {
+            color: $colorOfTheme;
+            &::before {
+                width: 235px
+            }
+        }
     }
     .recommendations__body {
-        display : grid;
-        width : 220vw;
-        grid-template-columns : repeat(auto-fill,minmax(250px,calc(20vw - 45px)));
+        width : 80vw;
+        margin-bottom: 65vh;
         grid-gap : 2rem;
-        padding-left : 3rem;
-        padding-right : 3rem;
         transition : all 1s;
         transform : translateX(0px);
         .product {
-            border : 2px solid mix(black,$colorOfTheme)
+            border : 2px solid mix(#48465b,$colorOfTheme);
+            .product__footer {
+                border-bottom: 1.7px solid mix(#48465b,$colorOfTheme)
+            }
         }
     }
-}
-
-.afterTranslate {
-    transform : translateX(calc(-100vw + 2rem)) !important
 }
 
 .moreInfo {
@@ -1267,7 +1447,8 @@ footer {
     width:100%;
     height: auto;
     background-color: #fff;
-    box-shadow: 5px 8px 10px rgba(48, 18, 255,.6);
+    border: 2px solid rgba(36, 41, 57,0.3);
+    border-top: 2.5px solid rgba(36,41,57,0.3);
     .product__header {
         width:100%;
         .product__header__image {
@@ -1282,11 +1463,13 @@ footer {
             font-family: 'Montserrat', sans-serif;
             font-size:25px;
             text-align:left;
-            font-weight:bold
+            font-weight:bold;
+            color: #48465b
         }
         #product__details__title {
             font-family: 'Montserrat', sans-serif;
             text-align:left;
+            color: #48465b
         }
         #product__details__category {
             font-family: 'Montserrat', sans-serif;
@@ -1300,10 +1483,10 @@ footer {
         justify-items: center;
         grid-column-gap:15px ;
         padding:5px;
-        border-bottom:1.7px solid black;
+        border-bottom: 1.7px solid rgba(36, 41, 57,0.6);
         button {
             @include styleButton(110px,auto,16px){
-                padding:5px;
+                padding:8px;
             }
         }
     }
@@ -1319,11 +1502,45 @@ footer {
             align-self:center;
             justify-self:center;
             padding-right:2px;
+            color: #242939;
             &::before {
                 padding-right:5px
             }
         }
     }
+}
+
+.r-1 {
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    width: 100%;
+    position: absolute;
+    left: 10vw;
+}
+
+.r-2 {
+    @extend .r-1;
+    transform: translateX(100vw);
+    transition: 1s;
+}
+
+.left-main {
+    animation: slideEffectLeft  .6s linear 1;
+    transform: translateX(100vw);
+}
+
+.left-secondary {
+    transform: translateX(0vw);
+}
+
+.right-main {
+    transition: .7s;
+    transform: translateX(100vw);
+}
+
+.right-secondary {
+    animation: slideEffectRight 1s linear 1;
+    transform: translateX(0vw);
 }
 
 .modal {
@@ -1369,6 +1586,7 @@ footer {
     @include profileTemplate;
     .settings__item {
         min-height:50px;
+        max-height: 100vh;
         width:80%;
         background: #fff;
         margin-bottom:30px;
@@ -1738,6 +1956,18 @@ footer {
     }
 }
 
+@keyframes titleEffect {
+    from {
+        transform: rotateY(90deg);
+        opacity: 0;
+        filter: blur(10px);
+    } to {
+        transform: rotateY(0deg);
+        opacity: 1;
+        filter: blur(0);
+    }
+}
+
 @keyframes lds-ellipsis2 {
     0% {
       transform: translate(0, 0);
@@ -1754,12 +1984,40 @@ footer {
         max-height : 15rem
     }
 }
- 
+
+@keyframes switchBackground {
+    from {
+       background-position: 0%;
+    } to {
+       background-position: 400%;
+    }
+}
+
 @keyframes emergenceHeart {
     from {
         transform: translateY(-20vh);
     } to {
         transform: translateX(0vh);
+    }
+}
+
+@keyframes slideEffectRight {
+    from {
+        transform: translateX(-110vw);
+        opacity: 0;
+    } to {
+        transform: translateX(0vw);
+        opacity: 1;
+    }
+}
+
+@keyframes slideEffectLeft {
+    from {
+        transform: translateX(0vw);
+        opacity: 1;
+    } to {
+        transform: translateX(-110vw);
+        opacity: 0;
     }
 }
 
@@ -1772,7 +2030,7 @@ footer {
 }
 
 body {
-    background-color : #f5f6fa;
+    background-color : #f2f3f8;
     margin:0px;
     overflow-x:hidden !important
 }
