--- a/frontend/src/css/Header.scss
+++ b/frontend/src/css/Header.scss
@@ -147,8 +147,9 @@
         }
 
         &::after {
-            top: 0  !important;
-            bottom: 9px;
+            top: auto;
+            height: 2.5px;
+            bottom: 8px;
         }
 
     }
@@ -175,7 +176,7 @@
 
             @for $i from 1 to 10 {
                 &:nth-child(#{$i}) {
-                    animation: titleEffect 2.8s (1.8 + (0.2 * ($i - 1))) linear;
+                    animation: titleEffect 2.8s (1.8s + (0.2 * ($i - 1))) linear;
                 }
             }
 
