--- a/frontend/src/css/Mixins.scss
+++ b/frontend/src/css/Mixins.scss
@@ -70,6 +70,7 @@
         height: 200px;
         padding: 30px;
         background: #fff;
+        box-shadow: 2px 2px 10px rgba(0,0,0,.6);
 
         .info__image {
             @include adaptiveImage;
