--- a/frontend/src/css/Profile.scss
+++ b/frontend/src/css/Profile.scss
@@ -125,6 +125,7 @@
         width: 80%;
         justify-self: end;
         background: white;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, .6);
 
         .error404 {
             width: 100%;
