--- a/frontend/src/css/Profile.scss
+++ b/frontend/src/css/Profile.scss
@@ -126,10 +126,12 @@
         justify-self: end;
         background: white;
         box-shadow: 2px 2px 10px rgba(0, 0, 0, .6);
+        overflow: auto;
 
         .error404 {
             width: 100%;
             top: 50%;
+            transform: translateY(-50%);
         }
 
     }
